...
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xPl-D3-5ub">
                                <rect key="frame" x="10" y="204" width="355" height="40"/>
                                <color key="backgroundColor" red="0.19877773467914983" green="0.33362995296135756" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="CodePushID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="mjn-Kz-5cW"/>
                                </constraints>
                                <state key="normal" title="Próxima Tela PUSH">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <action selector="actionNextScreenPush:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lPI-mv-lVY"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E6E-Pl-5zJ">
                                <rect key="frame" x="10" y="264" width="355" height="40"/>
                                <color key="backgroundColor" red="0.19877773469999999" green="0.33362995299999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="CodeModalID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="0Fk-fe-6Z7"/>
                                </constraints>
                                <state key="normal" title="Próxima Tela MODAL">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <action selector="actionNextScreenModal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Tx3-C7-hVQ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRl-lO-Cgt">
                                <rect key="frame" x="10" y="324" width="355" height="40"/>
                                <color key="backgroundColor" red="0.19877773469999999" green="0.33362995299999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="SeguePushID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="uRi-Bx-GXA"/>
                                </constraints>
                                <state key="normal" title="Segue PUSH">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <action selector="actionSeguePush:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OyV-9F-rhb"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hvu-4i-las">
                                <rect key="frame" x="10" y="384" width="355" height="40"/>
                                <color key="backgroundColor" red="0.19877773469999999" green="0.33362995299999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="SegueModalID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="wgJ-oK-vpW"/>
                                </constraints>
                                <state key="normal" title="Segue MODAL">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UiM-pu-JJQ">
                                <rect key="frame" x="10" y="435" width="355" height="40"/>
                                <color key="backgroundColor" red="0.052504495885094919" green="0.41898073186528495" blue="0.057417323990185683" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="ReturnButtonID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="qsA-F4-CTC"/>
                                </constraints>
                                <state key="normal" title="Retornar">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
