...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P9N-0d-2sf">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                            <inset key="contentEdgeInsets" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                            <state key="normal" title="Entre ou Cadastre-se">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </state>
                                            <connections>
                                                <action selector="presentMyAccount" destination="-1" eventType="touchUpInside" id="7of-3R-lfx"/>
                                            </connections>
                                        </button>
...
