...
                                                              icon:[UIImage imageNamed:@"ico_warranty"]
                                                      selectedIcon:[UIImage imageNamed:@"ico_warranty_pressed"]];
        [menuItems addObject:menuItem6];
        self.topViewHeight.constant += menuItemHeight;
    }
    
    SHPMenuItem *menuItem7 = [[SHPMenuItem alloc] initWithName:@"Sair"
                                                          icon:[UIImage imageNamed:@"ico_logout"]
                                                  selectedIcon:[UIImage imageNamed:@"ico_logout_pressed"]];
    [menuItems addObject:menuItem7];
    
    self.menuItems = [menuItems copy];
}
...
